third-party/vendor/bit-struct-0.3.2/tests/compile/too_big.rs
bit_struct::bit_struct! {
    struct TooMany(u16) {
        a: u32
    }
}

fn main() {}